[tool.poetry]
name = "fake-google-semantic-location-history"
version = "0.1.0"
description = ""
authors = ["Haili Hu <hailihu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
genson = "^1.2.2"
Faker = "^8.6.0"
geopy = "^2.1.0"
faker-schema = "^0.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
